--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./src/style.css">
     <title>Document</title>
 </head>
 <body>
     <div class="clock">
+
         <div class="dial">
             <span id="hours">00</span>
             <span class="time">Horas</span>
