atualização e implementação da lógica

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="clock">
 
         <div class="dial">
+
             <span id="hours">00</span>
             <span class="time">Horas</span>
         </div>
@@ -24,6 +25,8 @@
 
 
     </div>
+
+    <script src="./src/script.js"></script>
     
 </body>
 </html>
